<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android</string>
    <string name="menu">MENU</string>
    <string name="calculator">Calculator</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="button_equal">=</string>
    <string name="button_ac">AC</string>
    <string name="button_back">Back</string>
    <string name="button_float">.</string>

    <string name="mplayer">Music player</string>
    <string name="prev_button">prev</string>
    <string name="play_button">play</string>
    <string name="pause_button">pause</string>
    <string name="next_button">next</string>
    <string name="name">Name</string>
    <string name="volume_button">Volume</string>
    <string name="song_progress_format">%1$s - %2$s/%3$s</string>

    <string name="location">Location</string>
    <string name="save_location">Save Location</string>
    <string name="waiting">Waiting for location data...</string>

    <string name="current_time">Current time: %s</string>
    <string name="location_template">Latitude: %s\nLongitude: %s\nAltitude: %s м</string>
    <string name="access_error">Access error</string>
    <string name="save_success">Location saved</string>
    <string name="location_unavailable">Location unavailable</string>
    <string name="save_error">Save error</string>

</resources>